--- a/package.json
+++ b/package.json
@@ -1,31 +1,16 @@
 {
   "name": "llm-tools-agent",
   "version": "1.0.0",
-  "description": "Browser JS app with LLM conversation window and tool integrations (Google Search, AI Pipe, JS sandbox).",
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "keywords": [
-    "LLM",
-    "agent",
-    "tools",
-    "search",
-    "AI Pipe",
-    "sandbox"
-  ],
-  "author": "M.ANANTHAVALLI",
-  "license": "MIT",
   "dependencies": {
-    "bootstrap": "^5.3.3",
-    "dotenv": "^16.4.0",
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2",
-    "openai": "^4.57.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
+
